cambiar  InventarioController siguiendo la estructura del proyecto